<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.categories.UndergraduateBrowseFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/undergraduate_medical_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/medical"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/undergraduate_medical_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/undergraduate_medical_text_view" />

            <TextView
                android:id="@+id/undergraduate_engineering_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/engineering"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/undergraduate_medical_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/undergraduate_engineering_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/undergraduate_engineering_text_view" />

            <TextView
                android:id="@+id/undergraduate_bba_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/bba"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/undergraduate_engineering_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/undergraduate_bba_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/undergraduate_bba_text_view" />

            <Button
                android:id="@+id/button_see_ug_med"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_background_gradient"
                android:paddingHorizontal="24dp"
                android:text="@string/see_more"
                android:textColor="@color/White"
                android:textSize="@dimen/label_12sp"
                app:layout_constraintBottom_toBottomOf="@+id/undergraduate_medical_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/undergraduate_medical_text_view"
                app:layout_constraintTop_toTopOf="@+id/undergraduate_medical_text_view" />

            <Button
                android:id="@+id/button_see_ug_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background_gradient"
                android:paddingHorizontal="24dp"
                android:text="@string/see_more"
                android:textColor="@color/White"
                android:textSize="@dimen/label_12sp"
                app:layout_constraintBottom_toBottomOf="@+id/undergraduate_engineering_text_view"
                app:layout_constraintEnd_toEndOf="@+id/button_see_ug_med"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/button_see_ug_med"
                app:layout_constraintTop_toTopOf="@+id/undergraduate_engineering_text_view" />

            <Button
                android:id="@+id/button_see_ug_bba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background_gradient"
                android:paddingHorizontal="24dp"
                android:text="@string/see_more"
                android:textColor="@color/White"
                android:textSize="@dimen/label_12sp"
                app:layout_constraintBottom_toBottomOf="@+id/undergraduate_bba_text_view"
                app:layout_constraintEnd_toEndOf="@+id/button_see_ug_eng"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/button_see_ug_eng"
                app:layout_constraintTop_toTopOf="@+id/undergraduate_bba_text_view" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_shopping_cart_512" />


</androidx.constraintlayout.widget.ConstraintLayout>
