<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.categories.LiteratureBrowseFragment">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/literature_bangla_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/literature_bangla"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/label_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/literature_bangla_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/literature_bangla_text_view"
            app:layout_constraintVertical_bias="0.0" />


        <Button
            android:id="@+id/button_see_lit_bangla"
            android:background="@drawable/rounded_background_gradient"
            android:textColor="@color/White"
            android:textSize="@dimen/label_12sp"
            android:paddingHorizontal="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/see_more"
            app:layout_constraintBottom_toBottomOf="@+id/literature_bangla_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/literature_bangla_text_view"
            app:layout_constraintTop_toTopOf="@+id/literature_bangla_text_view" />

        <TextView
            android:id="@+id/literature_english_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/literature_english"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/label_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/literature_bangla_text_view"
            app:layout_constraintTop_toBottomOf="@+id/literature_bangla_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/literature_english_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/literature_bangla_recycler_view"
            app:layout_constraintStart_toStartOf="@+id/literature_bangla_recycler_view"
            app:layout_constraintTop_toBottomOf="@+id/literature_english_text_view"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_see_lit_eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:background="@drawable/rounded_background_gradient"
            android:textColor="@color/White"
            android:textSize="@dimen/label_12sp"
            android:paddingHorizontal="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/literature_english_text_view"
            app:layout_constraintEnd_toEndOf="@+id/button_see_lit_bangla"
            app:layout_constraintStart_toStartOf="@+id/button_see_lit_bangla"
            app:layout_constraintTop_toTopOf="@+id/literature_english_text_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_shopping_cart_512" />


</androidx.constraintlayout.widget.ConstraintLayout>